--- a/scss/components/_VTable.scss
+++ b/scss/components/_VTable.scss
@@ -12,7 +12,6 @@
       text-align: left;
       font-weight: bold;
       background-color: #f8f9fa;
-      border-bottom: 2px solid #ddd;
       user-select: none;
    }
 
@@ -20,9 +19,13 @@
       background-color: #e9ecef;
    }
 
+   th,
+   td {
+      border: 1px solid #ddd;
+   }
+
    td {
       padding: 10px;
-      border-bottom: 1px solid #ddd;
    }
 
    @media (max-width: 768px) {
